--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "chai": "~1.4.2",
-    "mocha": "~1.8.1"
+    "mocha": "~1.8.1",
+    "supertest": "~0.5.1"
   }
 }
