--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpwm-server",
-  "version": "1.0.0-108",
+  "version": "1.0.0-109",
   "private": true,
   "dependencies": {
     "connect-flash": "latest",
@@ -8,8 +8,9 @@
     "ejs": "latest",
     "express": "latest",
     "connect": "latest",
-    "connect-mongo": "0.2.0",
+    "connect-mongodb": "latest",
     "mime": "latest",
+    "mongodb": "latest",
     "mongoose": "latest",
     "passport": "latest",
     "passport-local": "latest",
