Changed code to support/assume that it'll be run on Modulus instead of Nodejitsu Changed protocol to https (currently breaks non-SSL development version) Fixed render('bitcoin_test') issue

--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "ww.magi-cal.me",
     "www.magi-cal.me"
   ],
-  "scripts": {
-    "start": "bootstrap.js"
-  },
+  "main": "bootstrap.js",
   "engines": {
     "node": "0.8.x"
   },
