--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpwm-server",
-  "version": "1.0.0-132",
+  "version": "1.0.0-135",
   "private": true,
   "dependencies": {
     "connect-flash": "latest",
@@ -10,6 +10,7 @@
     "connect": "latest",
     "connect-mongodb": "latest",
     "mime": "latest",
+    "moment": "latest",
     "mongodb": "1.3.4",
     "mongoose": "latest",
     "passport": "latest",
