Fixed corridor issues by: Upgrading jQuery UI from 1.8.21 to 1.10.3 Changing socket.io transport from websocket to xhr-polling (workaround; websockets don't work for some reason)
Renamed corridor/public/js/libs to corridor/public/js/lib
Added .foreverignore rules (weren't working before on my machine; fixed per https://github.com/nodejitsu/forever/issues/235#issuecomment-23847009)

--- a/.foreverignore
+++ b/.foreverignore
@@ -1,1 +1,15 @@
 *.log
+**/*.log
+
+# Ignore git repos
+.git
+**/.git
+**/.git/*
+**/.git/**/*
+
+# Ignore public files in "public" folders
+public/**/*
+**/public/**/*
+
+**/*.sublime-project
+**/*.sublime-workspace
