Various top-level changes: add comments, remove log statements, bump version, add redirect target validation, add session secret, add secure cookie flag

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpwm-server",
-  "version": "1.0.0-153",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "connect-flash": "latest",
