Restructure page, dividing it into Category and Tag tabs Fix multiselect for category tags, so category-tag CRUD fully works Add error-handling, both development and production versions

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "rpwm-server",
-  "version": "1.0.1-3",
+  "version": "1.0.1-6",
   "private": true,
   "dependencies": {
     "connect-flash": "latest",
     "ecstatic": "latest",
     "ejs": "latest",
-    "express": "latest",
+    "express": "3.x",
     "connect": "latest",
     "connect-mongodb": "latest",
     "mime": "latest",
