--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1-24",
   "private": true,
   "dependencies": {
+    "async": "latest",
     "connect-flash": "latest",
     "ecstatic": "latest",
     "ejs": "latest",
